<resources>
    <string name="app_name">UniversityApp</string>
    <string name="group_list_str">Список групп</string>
    <string name="student_list_str">Список студентов</string>
    <string name="title_activity_student_list">StudentList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_new_student_str">Добавить нового ученика</string>
    <string name="first_name_hint_str">Иванов</string>
    <string name="second_name_hint_str">Иван</string>
    <string name="patronymic_hint_str">Иванович</string>
    <string name="date_of_birth_str">01.01.1971</string>
    <string name="group_number_str">Номер группы</string>
    <string name="cancel_str">Отмена</string>
    <string name="add_str">Добавить</string>
    <string name="name_of_faculty_str">Название факультета</string>
    <string name="add_new_group_str">Добавить новую группу</string>
    <string name="title_activity_update_group">UpdateGroupActivity</string>
</resources>