<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".adds.NewStudentActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:background="#fefae0"
        android:text="Именить ученика"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/update_first_name_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:hint="@string/first_name_hint_str"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/update_second_name_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:hint="@string/second_name_hint_str"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_first_name_editText" />

    <EditText
        android:id="@+id/update_patronymic_editText"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:hint="@string/patronymic_hint_str"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_second_name_editText" />

    <EditText
        android:id="@+id/update_date_of_birth_editText"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:hint="@string/date_of_birth_str"
        android:inputType="date"
        android:textColor="@color/black"
        android:textColorHint="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_patronymic_editText" />

    <EditText
        android:id="@+id/update_group_number_editText"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:hint="@string/group_number_str"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_date_of_birth_editText" />

    <Button
        android:id="@+id/update_student_btn"
        android:layout_width="191dp"
        android:layout_height="76dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@android:color/black"
        android:text="Изменить ученика"
        android:textColor="@android:color/white"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_group_number_editText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ac_update_stud_cancel_btn"
        android:layout_width="191dp"
        android:layout_height="76dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/black"
        android:text="@string/cancel_str"
        android:textColor="@android:color/white"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/update_student_btn"
        app:layout_constraintTop_toBottomOf="@+id/update_group_number_editText"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>