<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".updateActivities.UpdateGroupActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:background="#fefae0"
        android:text="Именить группу"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/act_update_gr_faculty"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:hint="@string/name_of_faculty_str"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/update_groupN_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:hint="@string/group_number_str"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_update_gr_faculty"/>
    <Button
        android:id="@+id/update_group_btn"
        android:layout_width="191dp"
        android:layout_height="76dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@android:color/black"
        android:text="Изменить группу"
        android:textColor="@android:color/white"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ac_update_gr_cancel_btn"
        android:layout_width="191dp"
        android:layout_height="76dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/black"
        android:text="@string/cancel_str"
        android:textColor="@android:color/white"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/update_group_btn"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>